# thumbnailr

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  s3.rs
