[package]
name = "thumbnailr"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = "0.15.1"
lambda_runtime = "0.11.1"
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["macros"] }
aws-config = "1.2.0"
aws-smithy-http = "0.60.7"
aws-sdk-s3 = "1.23.0"
thumbnailer = "0.5.1"
mime = "0.3.17"
async-trait = "0.1.80"
webp = "=0.3.0"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.4"
chrono = "0.4.38"